base/007-dms/fuse-007-dms-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  creationTimestamp: ~
  labels: 
    app: dms
  name: dms
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: dms
  strategy: {}
  template: 
    metadata: 
      creationTimestamp: ~
      labels: 
        app: dms
    spec: 
      containers: 
        - 
          securityContext:
            privileged: false
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: "docker.prospecta.com/prospecta/mdo-dms:development"
          name: dms
          ports:
            - name: spring-port
              containerPort: 8080
              protocol: TCP
          resources: {}
      securityContext: {}
      imagePullSecrets:
        - name: nexus-image-pull
---
